Implement authentication and authorization system with JWT and API Key support
- Added new dependencies for authentication: jsonwebtoken, bcrypt, base64, rand, and thiserror.
- Created auth module with JWT claims, user and API key structures, and authentication logic.
- Implemented login, registration, and API key management endpoints in auth_handlers.
- Introduced middleware for authentication and security headers.
- Updated server to include public and protected routes with appropriate middleware.
- Enhanced request logging to include user authentication context.
- Added error handling for authentication-related issues.
- Created a default admin user for initial setup.

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ helm-values-*.yaml
 # Container registry credentials
 .docker/config.json
 docker-compose.override.yml
+
+# Test scripts output
+test_*.log
+test_output/
