--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,13 @@ uuid = { version = "1.0", features = ["serde", "v4"] }
 # Crypto
 sha2 = "0.10"
 
+# Authentication and security
+jsonwebtoken = "9.2"
+bcrypt = "0.15"
+base64 = "0.21"
+rand = "0.8"
+thiserror = "1.0"
+
 # HTTP client for testing
 reqwest = { version = "0.11", features = ["json"] }
 
