--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,41 +14,37 @@ name = "simple_client"
 path = "examples/simple_client.rs"
 
 [dependencies]
-# Web server dependencies
-tokio = { version = "1.0", features = ["full"] }
-axum = "0.7"
-tower = "0.4"
-tower-http = { version = "0.5", features = ["cors"] }
-hyper = "1.0"
+# HTTP Server - ntex
+ntex = { version = "2.15.0", features = ["tokio", "rustls"] }
+ntex-files = "2.1.0"
+ntex-cors = "2.1.0"
+
+# Async runtime
+tokio = { version = "1.32", features = ["full"] }
+
+# Database
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "time", "json", "migrate", "macros"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-toml = "0.8"
 
-# Database
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate"] }
+# Authentication
+jsonwebtoken = "9.1"
+argon2 = "0.5"
+bcrypt = "0.17.0"
+rand = "0.9.1"
 
-# Date/time
+# Utility
+uuid = { version = "1.5", features = ["v4", "serde"] }
 chrono = { version = "0.4", features = ["serde"] }
 
-# UUID generation
-uuid = { version = "1.0", features = ["serde", "v4"] }
-
-# Crypto
-sha2 = "0.10"
-
-# Authentication and security
-jsonwebtoken = "9.2"
-bcrypt = "0.15"
-base64 = "0.21"
-rand = "0.8"
-thiserror = "1.0"
-
-# HTTP client for testing
-reqwest = { version = "0.11", features = ["json"] }
-
-
+thiserror = "2.0.12"
+log = "0.4"
+env_logger = "0.11.8"
+dotenv = "0.15"
+futures = "0.3"
+base64 = "0.22"
 
 [features]
 default = ["postgres"]
